samples/_failures_safe/1761351156_f25fc1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fe1b3e1.c: In function ‘main’:
./samples/SAFE/__tmp_1fe1b3e1.c:136:21: error: expected declaration or statement at end of input
  136 |                     sum += product;
      |                     ^~~
./samples/SAFE/__tmp_1fe1b3e1.c:136:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1fe1b3e1.c:136:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1fe1b3e1.c:136:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1fe1b3e1.c:136:21: error: expected declaration or statement at end of input
